raffia/tests/error/scss/at-rule/if/partial_if.snap
---
source: raffia/tests/error.rs
---
error: expect token `{`, but `<ident>` received
  ┌─ partial_if.scss:2:7
  │
2 │ @else i
  │       ^


